feat: Implement '/api/questions' API methods
